--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
+    "angular2-ladda": "^3.1.0",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
+    "ladda": "^2.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
